--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     </div>
                     <div class="receive_item">
                         <div class="command">
-                            player_add name ""
+                            Select Your Item To recieve an item
                         </div>
                         <div class="spacer"></div>
                         <div class="copy button">
